@@ -1,3 +1,8 @@
+2005-12-08  Werner Koch  <wk@g10code.com>
+
+	* packages/download.sh: Implemented CHK statement.
+	* packages/packages.current: Add chk lines for all packages.
+
 2005-12-07  Werner Koch  <wk@g10code.com>
 
 	Released 0.3.1.
